# FUSE

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  setup.py
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  generate_candidates_main.cpp
benchmarks/common/: CMakeLists.txt  common.cpp  common.h
benchmarks/file_size_comparisons/: CMakeLists.txt  bristol_circuits.txt  size_comparison.hpp  size_comparison_main.cpp
benchmarks/loading_times_comparison/: CMakeLists.txt  loading_comparison.hpp  loading_comparison_main.cpp
benchmarks/motion_runtime_benchmarks/: CMakeLists.txt  bristol_candidates.txt  motion_bm_main.cpp  motion_implementation.hpp  motion_vectorization_bm.h
benchmarks/ram_consumption/: CMakeLists.txt  fuse_ram_bm.cpp  hycc_ram_bm.cpp  run_bm.sh
doc/: setup-vm-on-arm-mac.md
examples/bristol_circuits/: FP-add.bristol  FP-ceil.bristol  FP-eq.bristol  FP-f2i.bristol  FP-floor.bristol  FP-i2f.bristol  FP-lt.bristol  FP-mul.bristol  andGate.bristol  fullAdder.bristol  notGate.bristol  sha_256.bristol  twoAndDeep.bristol  twoAndFlat.bristol  xorGate.bristol
examples/hycc_circuits/compiled_to_fuseir/: biomatch1k.mfs  biomatch4k.mfs  tutorial_addition.mfs
fbs/: CMakeLists.txt  circuit.fbs  datatype.fbs  module.fbs  node.fbs
src/: CMakeLists.txt
src/backend/: BristolFormatBackend.cpp  BristolFormatBackend.h  CMakeLists.txt  DOTBackend.cpp  DOTBackend.h  Evaluator.hpp  GraphBackend.cpp  GraphBackend.h  MOTIONBackend.cpp  MOTIONBackend.h  PlaintextInterpreter.hpp
src/backend/mpspdz_backend/: __init__.py  fuse_circuit.py
src/core/: BaseVisitor.cpp  BaseVisitor.h  IR.cpp  IR.h  ModuleBuilder.cpp  ModuleBuilder.h  ModuleWrapper.cpp  ModuleWrapper.h  PrimitiveOperationPolicies.hpp  PrimitiveTypeTraits.hpp
src/core/util/: IOHandlers.cpp  IOHandlers.h
src/examples/: CMakeLists.txt
src/examples/developer/: CMakeLists.txt  Tutorial.cpp
src/examples/mnist_circ/: CMakeLists.txt  build_ml_circ.cpp  build_mnist.hpp
src/examples/motion_frontend/: CMakeLists.txt  motion_frontend_main.cpp
src/examples/passes/: CMakeLists.txt  call_stack_analysis_main.cpp  new_pass.cpp  sub_repl_main.cpp  vec_main.cpp
src/frontend/: BristolFrontend.cpp  BristolFrontend.h  CMakeLists.txt  HyCCFrontend.cpp  HyCCFrontend.h  MOTIONFrontend.cpp  MOTIONFrontend.h
src/passes/: CallStackAnalysis.cpp  CallStackAnalysis.h  ConstantFolder.cpp  ConstantFolder.h  DeadNodeEliminator.cpp  DeadNodeEliminator.h  DepthAnalysis.cpp  DepthAnalysis.h  FrequentSubcircuitReplacement.cpp  FrequentSubcircuitReplacement.h  InstructionVectorization.cpp  InstructionVectorization.h  NodeSuccessorsAnalysis.cpp  NodeSuccessorsAnalysis.h  OperationsAnalysis.cpp  OperationsAnalysis.h
src/util/: ModuleGenerator.cpp  ModuleGenerator.h
tests/: CMakeLists.txt  TestBristolFrontend.cpp  TestConstantFolding.cpp  TestDOTBackend.cpp  TestDeadNodeOptimization.cpp  TestDepthAnalysis.cpp  TestFrequentSubcircuitReplacement.cpp  TestGraphBackend.cpp  TestHyCCFrontend.cpp  TestInstructionVectorization.cpp  TestInterpreter.cpp  TestLargeCircuits.cpp  TestMOTIONBackend.cpp  TestMOTIONFrontend.cpp  TestMnistCirc.cpp  TestWrappers.cpp
tests/resources/graph_translate/: distgraph_patterns.txt
tests/resources/optimizable/: dead_nodes_1.txt  dead_nodes_2.txt  vectorgraph.txt
tests/resources/subgraph/: subgraph.txt
